tests/wordpress/fail/plugins/light-post/wp-light-post.php
<?php
/*
Plugin Name: Light Post
Plugin URI: http://blog.bokhorst.biz/4146/computers-en-internet/wordpress-plugin-light-post/
Description: Resource light alternate post management screen for use on slow connections and/or slow computers
Version: 1.4
Author: Marcel Bokhorst
Author URI: http://blog.bokhorst.biz/about/
*/
